; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Thread.c_Thread_Mark.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Thread.c_Thread_Mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Thread = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Thread*, %struct.Thread*, void (%struct.Thread*, i8*)*)* @Thread_Mark to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Thread_Mark(%struct.Thread* %0, %struct.Thread* %1, void (%struct.Thread*, i8*)* %2) #0 {
  %4 = alloca %struct.Thread*, align 8
  %5 = alloca %struct.Thread*, align 8
  %6 = alloca void (%struct.Thread*, i8*)*, align 8
  %7 = alloca %struct.Thread*, align 8
  store %struct.Thread* %0, %struct.Thread** %4, align 8
  store %struct.Thread* %1, %struct.Thread** %5, align 8
  store void (%struct.Thread*, i8*)* %2, void (%struct.Thread*, i8*)** %6, align 8
  %8 = load %struct.Thread*, %struct.Thread** %4, align 8
  store %struct.Thread* %8, %struct.Thread** %7, align 8
  %9 = load %struct.Thread*, %struct.Thread** %7, align 8
  %10 = getelementptr inbounds %struct.Thread, %struct.Thread* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.Thread*, %struct.Thread** %5, align 8
  %13 = load void (%struct.Thread*, i8*)*, void (%struct.Thread*, i8*)** %6, align 8
  %14 = call i32 @mark(i32 %11, %struct.Thread* %12, void (%struct.Thread*, i8*)* %13)
  ret void
}

declare dso_local i32 @mark(i32, %struct.Thread*, void (%struct.Thread*, i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
